# telescope

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/telescope/: __init__.py  anthropic_client.py  google_client.py  llm_client_interface.py
tests/: test.py
