[metadata]
name = telescope
version = 0.1.0
description = A unified interface for Language Model Clients
long_description = file: README.md
long_description_content_type = text/markdown
author = Digital Galaxy
author_email = Vitalii.Kostenko@digitalgalaxy.com
url = https://github.com/digitalgalaxy/telescope
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    typing_extensions==4.12.2
    anthropic==0.49.0
    google-genai==1.9.0
python_requires = >=3.8

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
